[package]
name = "pretty_env_logger"
version = "0.4.0" # don't forget to update html_root_url
description = "a visually pretty env_logger"
repository = "https://github.com/seanmonstar/pretty-env-logger"
authors = ["Sean McArthur <sean@seanmonstar>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
log = "0.4"

[dependencies.env_logger]
version = "0.7.0"
default-features = false
features = ["termcolor"]

[features]
default = ["atty", "humantime", "regex"]
atty = ["env_logger/atty"]
humantime = ["env_logger/humantime"]
regex = ["env_logger/regex"]
